fix for vertical align for button in header

--- a/megatheme/main.css
+++ b/megatheme/main.css
@@ -24,11 +24,11 @@ h1 {
     box-shadow: 0 0 3px 1px rgba(0,0,0,.8);
 }
 
-.fa-chevron-left, .fa-chevron-right, .fa-times {
+.fa-chevron-left, .fa-chevron-right {
     cursor: pointer
 }
 
-.fa-chevron-left:hover, .fa-chevron-right:hover, .fa-times:hover {
+.fa-chevron-left:hover, .fa-chevron-right:hover {
     color: #D24634 !important;
 }
 
@@ -51,12 +51,8 @@ h1 {
     z-index: 999;
 }
 
-#lp-pom-box-490 {
-    /*position: absolute !important;
-    top: 300px !important;
-    left: 50% !important;
-    margin-left: -300px !important;
-    z-index: 9999 !important;*/
+a#lp-pom-button-21 .label {
+    margin-top: -7px;
 }
 
 
